# activity_recognition_ros

./: CMakeLists.txt  README.md  package.xml
config/: activities.txt
launch/: recognize_activity.launch
scripts/: i3d_trainer.py  recognize_activity  video_dataset.py
