<?xml version="1.0"?>
<package format="2">
  <name>activity_recognition_ros</name>
  <version>0.1.0</version>
  <description>Recognizes human activities from video</description>

  <author email="santosh.thoduka@gmail.com">Santosh Thoduka</author>
  <maintainer email="santosh.thoduka@gmail.com">Santosh Thoduka</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>metrics_refbox_msgs</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
